less/grid.less
@import "mix.less";

.row-flex {
    .disp(flex);
    flex-wrap: wrap;
}

.flex-auto {
    .flexbox(auto);
}

.fx(@i:1) when (@i <= 16) {
    .flex-@{i} {
        .flexbox(@i/16 * 100%)
    }
    .offset-@{i} {
        .margin(0 0 0 (@i/16 * 100%));
    }
    .fx(@i + 1);
}

.fx-su(@su, @i:1) when (@i <= 16) {
    .flex-@{su}@{i} {
        .flexbox(@i/16 * 100%)
    }
    .offset-@{su}@{i} {
        .margin(0 0 0 (@i/16 * 100%));
    }
    .fx-su(@su; @i + 1);
}

.fx();
@media screen and @minSm {

    .fx-su(sm-);

    .flex-sm-auto {
        .flexbox(auto);
    }
}

@media screen and @minMd {

    .fx-su(md-);

    .flex-md-auto {
        .flexbox(auto);
    }
}

@media screen and @minLg {

    .fx-su(lg-);

    .flex-lg-auto {
        .flexbox(auto);
    }
}
@media screen and @minXlg {

    .fx-su(xlg-);

    .flex-xlg-auto {
        .flexbox(auto);
    }
}

.direction-column {
    .disp(flex);
    .f-direction(column);
}
.direction-column-reverse {
    .disp(flex);
    .f-direction(column-reverse);
}
.direction-row {
    .disp(flex);
    .f-direction(row);
}
.direction-row-reverse {
    .disp(flex);
    .f-direction(row-reverse);
}

.flex-no-wrap {
    .disp(flex);
    flex-wrap: nowrap;
}
.flex-wrap-reverse {
    .disp(flex);
    flex-wrap: wrap-reverse;
}

.row-grid {
    .disp(grid);
    grid-gap: 30px;
}
.justify-around {
    .justify(space-around);
}
.justify-evenly {
    .justify(space-evenly);
}
.justify-between {
    .justify(space-between);
}
.justify-start {
    .justify(start);
}
.justify-center {
    .justify(center);
}
.justify-end {
    .justify(end);
}

.align-around {
    .align-c(space-around);
}
.align-evenly {
    .align-c(space-evenly);
}
.align-between {
    .align-c(space-between);
}
.align-start {
    .align-c(start);
}
.align-center {
    .align-c(center);
}
.align-end {
    .align-c(end);
}

._around {
    .justify-around();
    .align-around();
}
._evenly {
    .justify-evenly();
    .align-evenly();
}
._between {
    .justify-between();
    .align-between();
}
._center {
    .justify-center();
    .align-center();
}
._end {
    .justify-end();
    .align-end();
}

._around-flex {
    .disp(flex);
    ._around()
}
._evenly-flex {
    .disp(flex);
    ._evenly()
}
._between-flex {
    .disp(flex);
    ._between()
}
._center-flex {
    .disp(flex);
    ._center();
    .align(center);
}
._end-flex {
    .disp(flex);
    ._end
}

._around-grid {
    .disp(grid);
    ._around()
}
._evenly-grid {
    .disp(grid);
    ._evenly()
}
._between-grid {
    .disp(grid);
    ._between()
}
._center-grid {
    .disp(grid);
    ._center();
    .align(center);
}
._end-grid {
    .disp(grid);
    ._end
}

